[tool.poetry]
name = "remote-py"
version = "0.2.3"
description = "Soft wrapper on top of awscli"
authors = ["Matthew Upson <matt@mantisnlp.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "remotepy"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
typer = "^0.9.0"
configparser = "^6.0.0"
boto3 = "^1.28.3"
wasabi = "^1.1.2"
typing-extensions = "^4.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.11.1"
tox = "^4.6.4"
flake8 = "^6.0.0"
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
remote = "remotepy.__main__:app"
