[project]
name = "remotepy"
version = "1.0.0"
description = "CLI tool for managing AWS EC2 instances, ECS services, and related resources"
authors = [{name = "Matthew Upson", email = "matt@mantisnlp.com"}]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["aws", "ec2", "ecs", "cli", "devops", "cloud", "infrastructure"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.15.0",
    "boto3>=1.42.0",
    "rich>=13.0.0",
    "pydantic-settings>=2.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
]

[project.scripts]
remote = "remote.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["remote"]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "integration: marks tests that require real AWS credentials (deselect with '-m \"not integration\"')",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "E722",  # do not use bare except - will fix gradually
    "F811",  # redefinition of unused function - will fix gradually
    "B904",  # exception chaining - will improve gradually
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "bandit>=1.9.2",
    "boto3-stubs[ec2,ecs,sts]>=1.42.0",
    "hypothesis>=6.135.14",
    "mypy>=1.14.0",
    "pip-audit>=2.10.0",
    "pre-commit>=4.0.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.0",
    "tox>=4.27.0",
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ============================================================================
# MyPy Type Checking Configuration
# ============================================================================

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "botocore.*",
]
ignore_missing_imports = true

# ============================================================================
# Test Coverage Configuration
# ============================================================================

[tool.coverage.run]
source = ["remote"]
omit = [
    "tests/*",
    "remote/__init__.py",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
skip_covered = false
skip_empty = false

# Minimum coverage thresholds - fail if below these percentages
fail_under = 85
precision = 1

[tool.coverage.html]
directory = "htmlcov"
title = "RemotePy Test Coverage Report"

[tool.coverage.xml]
output = "coverage.xml"
