[metadata]
name = remotepy
version = 0.1.0
author = Matthew Upson
author_email = matthew.a.upson@gmail.com
description = Utility for controling remote instances
long_description = file: README.md
url = https://www.github.com/ivyleavedtoadflax/remote.py
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires = 
    typer
    configparser
    boto3
python_requires = >= 3.6
