[metadata]
name = remotepy
version = 0.1.9
author = Matthew Upson
author_email = matthew.a.upson@gmail.com
description = Utility for managing ec2 instances
long_description = file: README.md
url = https://www.github.com/ivyleavedtoadflax/remote.py
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires = 
    typer
    configparser
    boto3
    wasabi
python_requires = >= 3.6

[options.extras_require]
test = 
    pytest
    tox
    flake8
    black

[options.entry_points]
console_scripts =
    remote = remotepy.cli:app
